# aoc2024

./: Cargo.toml  README.md
aoc-benchmarking/: Cargo.toml
aoc-benchmarking/benches/: bench_main.rs
aoc-cli/: Cargo.toml
aoc-cli/src/: cli.rs  fast.rs  main.rs
ci/: build-task.yaml
ci/scripts/: build.sh
day-001-historian-hysteria/: README.md
day-001-historian-hysteria/src/: lib.rs
day-002-red-nosed-reports/: README.md
day-002-red-nosed-reports/src/: lib.rs
day-003-mull-it-over/: README.md
day-003-mull-it-over/src/: lib.rs
day-004-ceres-search/: README.md
day-004-ceres-search/src/: lib.rs
day-005-print-queue/: README.md
day-005-print-queue/src/: lib.rs
day-006-guard-gallivant/src/: lib.rs
day-007-bridge-repair/src/: lib.rs
day-008-resonant-collinearity/src/: lib.rs
day-009-disk-fragmenter/src/: lib.rs
day-010-hoof-it/src/: lib.rs
day-011-plutonium-pebbles/: Cargo.toml
day-011-plutonium-pebbles/src/: lib.rs
day-012-garden-groups/src/: lib.rs
day-013-claw-contraption/src/: lib.rs
day-014-restroom-redoubt/: Cargo.toml
day-014-restroom-redoubt/src/: lib.rs
day-015-warehouse-woes/src/: lib.rs
day-016-reindeer-maze/src/: lib.rs
day-017-chronospatial-computer/src/: lib.rs
day-018-ram-run/src/: lib.rs
day-019-linen-layout/src/: lib.rs
day-020-race-condition/src/: lib.rs
day-021-keypad-conundrum/src/: lib.rs
day-022-monkey-market/src/: lib.rs
template/: Cargo.toml
