[workspace]
resolver = "2"
members = [
    "aoc-benchmarking",
    "aoc-cli",
    "aoc-plumbing",
    "day-*",
]

exclude = ["template"]

[workspace.dependencies]
aoc-std = { version = "0.4", registry = "ancalagon" }
anyhow = "1.0.93"
itertools = "0.13.0"
nom = { version = "7.1", features = ["alloc"] }
num = "0.4.3"
rayon = "1.10.0"
rustc-hash = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.3"

[profile.release]
lto = true
