[package]
name = "aoc-benchmarking"
version = "0.1.0"
edition = "2021"
description = "Wrapper for having benchmarks in a single place."

[[bench]]
name = "bench_main"
harness = false

[dev-dependencies]
criterion = { version = "0.5.1", features = ["csv_output"] }

[dependencies]
aoc-plumbing = { path = "../aoc-plumbing" }
historian-hysteria = { path = "../day-001-historian-hysteria" }
red-nosed-reports = { path = "../day-002-red-nosed-reports" }
mull-it-over = { path = "../day-003-mull-it-over" }
ceres-search = { path = "../day-004-ceres-search" }
print-queue = { path = "../day-005-print-queue" }
guard-gallivant = { path = "../day-006-guard-gallivant" }
bridge-repair = { path = "../day-007-bridge-repair" }
