[package]
name = "aoc-cli"
version = "0.12.0"
authors = ["Matt Chun-Lum <matt@questionable.engineering>"]
edition = "2021"
description = "A command line interface for executing Advent of Code solutions."

[[bin]]
name = "aoc"
path = "src/main.rs"

[dependencies]
aoc-plumbing = { path = "../aoc-plumbing" }
anyhow = { workspace = true }
clap = { version = "4", features = ["cargo", "env", "derive", "wrap_help"] }
clap_complete = "4"
serde = { workspace = true }
serde_json = { workspace = true }
historian-hysteria = { path = "../day-001-historian-hysteria" }
red-nosed-reports = { path = "../day-002-red-nosed-reports" }
mull-it-over = { path = "../day-003-mull-it-over" }
ceres-search = { path = "../day-004-ceres-search" }
print-queue = { path = "../day-005-print-queue" }
guard-gallivant = { path = "../day-006-guard-gallivant" }
bridge-repair = { path = "../day-007-bridge-repair" }
resonant-collinearity = { path = "../day-008-resonant-collinearity" }
disk-fragmenter = { path = "../day-009-disk-fragmenter" }
hoof-it = { path = "../day-010-hoof-it" }
plutonium-pebbles = { path = "../day-011-plutonium-pebbles" }
garden-groups = { path = "../day-012-garden-groups" }
